# transcribe-video

./: .gitignore  PROJECT.md  README.md  build.bat  build.ps1  conftest.py  pyproject.toml  start.bat  start.ps1
docs/superpowers/plans/: 2026-05-21-source-selection.md
docs/superpowers/specs/: 2026-05-20-source-selection-design.md  2026-06-18-project-layout-restructure-design.md
scripts/: tee_runner.py
src/: audio_activity.py  index.html  runtime_paths.py  server.py  transcribe_video.py  youtube.py
tests/: test_youtube.py
transcribe-video/: pyproject.toml
transcribe-video/scripts/: build.ps1
transcribe-video/src/: audio_activity.py  folder_dialog.py  index.html  server.py  transcribe_video.py  youtube.py
