[project]
name = "transcribe-video"
version = "0.1.0"
description = "Local Whisper-based video transcription tools and FastAPI server."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.12",
  "faster-whisper==1.2.1",
  "torch==2.11.0",
  "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.14,<7",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
