[project]
name = "transcribe-video"
version = "0.1.0"
description = "Local Whisper-based video transcription tools and FastAPI server."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.12",
  "faster-whisper==1.2.1",
  "torch==2.11.0",
  "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.14,<7",
  "pytest>=8,<9",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
# 테스트가 src/ 의 모듈을 import할 수 있도록 경로 추가. (구 conftest.py 대체)
pythonpath = ["src"]
